# Paddle

paddle/fluid/eager/: CMakeLists.txt  autograd_meta.h  backward.cc  eager_tensor.h  function_api.h  grad_node_info.cc  input_buffer.cc  input_buffer.h  utils.cc  utils.h
paddle/fluid/eager/api/: CMakeLists.txt  api.h  fwd_ops_impl.cc
paddle/fluid/eager/auto_code_generator/: eager_generator.cc
paddle/fluid/eager/autocodegen/: eager_generator.cc  op_list.txt
paddle/fluid/eager/nodes/: CMakeLists.txt  elementwise_add_node.cc  elementwise_add_node.h  matmul_v2_node.cc  matmul_v2_node.h  reduce_sum_node.cc  reduce_sum_node.h
paddle/fluid/eager/tests/: CMakeLists.txt  generated_test.cc  kernel_accuracy_test.cc  test_utils.h
paddle/fluid/imperative/: dygraph_grad_maker.h  tracer.cc
paddle/fluid/pybind/: CMakeLists.txt  eager_functions.cc  eager_method.cc  eager_properties.cc  eager_utils.cc  eager_utils.h
paddle/pten/api/: CMakeLists.txt
paddle/pten/core/: kernel_utils.h
paddle/pten/hapi/: CMakeLists.txt  all.h
paddle/pten/hapi/lib/: CMakeLists.txt  elementwise.cc  grad_elementwise.cc  grad_linalg.cc  grad_reduce.cc  kernel_dispatch.h  linalg.cc  reduce.cc
paddle/pten/infershape/: binary.cc  binary.h  unary.cc  unary.h
paddle/pten/tests/: CMakeLists.txt  test_elementwise_api.cc  test_grad_elementwise_api.cc  test_grad_matmul_api.cc  test_grad_reduce_api.cc  test_matmul_api.cc  test_reduce_api.cc
paddle/tcmpt/api/: CMakeLists.txt
paddle/tcmpt/infershape/: binary.h
paddle/tcmpt/tests/: CMakeLists.txt  test_matmul_api.cc  test_reduce_api.cc
(+73 files in other folders)
